wult (1.9.8) unstable; urgency=low

  * wult/ndl: use modules from the 'pepc' project (new dependency)
  * wult: few more informative error messages
  * wult: -H option can now be placed anywhere

 -- Artem Bityutskiy <artem.bityutskiy@intel.com>  Fri, 08 Oct 2021 10:53:30 +0300

wult (1.9.7) unstable; urgency=low

  * wult: add 'start --early-intr' option/capability.
  * wult/ndl: add 'report --relocatable=noraw' support.

 -- Artem Bityutskiy <artem.bityutskiy@intel.com>  Thu, 09 Sep 2021 11:43:25 +0300

wult (1.9.6) unstable; urgency=low

  * wult: improve driver error diagnostics.
  * wult: stop supporing kernels older than v5.6.
  * wult: add 'start --intr-focus' option/capability.
  * wult: add 'start --keep-raw-data' option.
  * wult: add 'start --offline' option/capability.
  * wult: add 'filter --human-readable' option.
  * wult/ndl: removed '--post-trigger' option/capability.

 -- Artem Bityutskiy <artem.bityutskiy@intel.com>  Thu, 09 Sep 2021 11:43:25 +0300

wult (1.9.5) unstable; urgency=low

  * wult: many fixes for small, but annoying problems

 -- Artem Bityutskiy <artem.bityutskiy@intel.com>  Fri, 30 Jul 2021 12:49:44 +0300

wult (1.9.4) unstable; urgency=low

  * wult/ndl: speed up measuring remote SUTs.

 -- Artem Bityutskiy <artem.bityutskiy@intel.com>  Mon, 19 Jul 2021 12:19:14 +0300

wult (1.9.3) unstable; urgency=low

  * wult: add new driver: hrtimer.
  * wult: add POLL idle state support.
  * wult/ndl: add '--keep-filtered' option for start command.
  * wult/ndl: remove broken "advanced" options.
  * wult: fix 'stats-collect' deployment.

 -- Artem Bityutskiy <artem.bityutskiy@intel.com>  Tue, 29 Jun 2021 18:51:57 +0300

wult (1.9.2) unstable; urgency=low

  * wult: add statistics collection capability.
  * wult: include less diagrams into report by default.
  * wult: change default launch distance range from 0-8ms to 0-4ms.
  * wult: fix false warning about C-state prewake setting.