@@ -246,6 +246,20 @@ def build_arguments_parser():
               use '--intr-focus' at the same time."""
     subpars.add_argument("--early-intr", action="store_true", help=text)
 
+    text = f"""Deeper C-states like Intel CPU core C6 flush the CPU cache before entering the
+               C-state. Therefore, the dirty CPU cache lines must be written back to the main memory
+               before entering the C-state. This may increase C-state latency observed by the
+               operating system. If this option is used, {OWN_NAME} will try to "dirty" the measured
+               CPU cache before requesting C-states. This is done by writing zeroes to a
+               pre-allocated 2MiB buffer."""
+    subpars.add_argument("--dirty-cpu-cache", action="store_true", help=text)
+
+    text = f"""By default, in order to make CPU cache be filled with dirty cache lines, {OWN_NAME}
+               filles a 2MiB buffer with zeroes before requesting a C-state. This buffer is reffered
+               to as "dirty cache buffer", or "dcbuf". This option allows for changing the dcbuf
+               size. For example, in order to make it 4MiB, use '--dcbuf-size=4MiB'."""
+    subpars.add_argument("--dcbuf-size", help=text)
+
     text = """Offline CPUs before the measurements. The possible values are: same-core,
               same-package, all.  The "same-core" value offlines all other CPUs on the same core as
               the measured CPU. The "same-package" value offlines all CPUs on the same package as
@@ -454,6 +468,9 @@ def start_command(args):
         list_stats()
         return
 
+    if args.dcbuf_size and not args.dirty_cpu_cache:
+        raise Error("'--dcbuf-size' option must be used together with '--dirty-cpu-cache' option")
+
     stconf = None
     if args.stats and args.stats != "none":
         if not WultStatsCollect.STATS_NAMES:
@@ -491,6 +508,15 @@ def start_command(args):
     args.tsc_cal_time = Human.parse_duration(args.tsc_cal_time, default_unit="s",
                                             name="TSC calculation time")
 
+    if args.dirty_cpu_cache:
+        if not args.dcbuf_size:
+            args.dcbuf_size = "2MiB"
+
+        args.dcbuf_size = Human.parse_bytesize(args.dcbuf_size)
+        if args.dcbuf_size <= 0:
+            raise Error(f"bad dirty CPU cache buffer size '{args.dcbuf_size}', must be a positive "
+                        f"integer")
+
     with contextlib.ExitStack() as stack:
         cpuinfo = CPUInfo.CPUInfo(proc=proc)
         stack.enter_context(cpuinfo)
@@ -526,7 +552,7 @@ def start_command(args):
 
         runner = WultRunner.WultRunner(proc, dev, res, ldist=args.ldist, intr_focus=args.intr_focus,
                                        early_intr=args.early_intr, tsc_cal_time=args.tsc_cal_time,
-                                       cpuidle=cpuidle, stconf=stconf)
+                                       dcbuf_size=args.dcbuf_size, cpuidle=cpuidle, stconf=stconf)
         stack.enter_context(runner)
 
         runner.unload = not args.no_unload
