@@ -1,7 +1,8 @@
 wult (1.9.8) unstable; urgency=low
 
+  * wult: new feature/option: --dirty-cpu-cache
   * wult/ndl: use modules from the 'pepc' project (new dependency)
-  * wult: few more informative error messages
+  * wult: improve error messages
   * wult: -H option can now be placed anywhere
 
  -- Artem Bityutskiy <artem.bityutskiy@intel.com>  Fri, 08 Oct 2021 10:53:30 +0300
